# demo-industrial-iot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
docs/: TZ.md
scripts/: check_no_ai_signature.py
src/bridge/: db_handler.py  machine_tester.py  main.py  odoo_api.py  plc_simulator.py  scanner.py
tests/: test_db_handler.py  test_machine_tester.py  test_plc_simulator.py
